--- a/a_registro.html
+++ b/a_registro.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="./styles/tortita.png" type="image/x-icon">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Registro | Tu Lista de Mercado</title>
 </head>
@@ -14,18 +15,28 @@
 <body class="container_todo">
     <div class="container_contenido">
         <header>
-                <h1>WAFFLER</h1>
-                <h2>Una renovada lista de compras</h2>
+            <h1>Waffler</h1>
+            <h2>Una renovada lista de compras</h2>
+            <nav>
+                <ul>
+                    <li><a href="./b_inicio.html">Lista</a></li>
+                    <li><a href="./c_lista.html">Recetas</a></li>
+                    <li><a href="./d_recetas.html">Inicio</a></li>
+                    <li class="navAtras"><a href="./a_registro.html">Atrás</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <h3>Organizá tu <span>Waffler</span> y tené tu lista siempre al alcance de la mano</h3>
-
-            <section>
+            <section class="formulario">
                 <h4>¡Bienvenido/a! ¿Cual es tu nombre?</h4>
-                <form>
-                    <input id="aPedirNombre" placeholder="Escribe tu nombre..." type="text">
-                    <input class="btn boton" id="aIngresar" type="submit" value="¡Listo!">
-                </form>
+              <form>
+                <fieldset>
+                    <label for="nombre">Escribe tu nombre...</label>
+                    <input type="text" id="nombre"/>
+                    <button type="button" onclick="saludo()">Enviar</button>
+                </fieldset>
+              </form>
             </section>
         </main>
     </div>
