--- a/b_inicio.html
+++ b/b_inicio.html
@@ -16,13 +16,13 @@
     <div class="container_contenido">
         <header>
             <h1>Waffler</h1>
-            <h2>¡Hola, <span id="nombre"></span>! Estoy feliz de que estés aquí.</h2>
+            <h2>¡Hola, <p id="mostrar"></p>! Estoy feliz de que estés aquí.</h2>
             <p>¿Que haremos hoy?</p>
             <nav>
                 <ul>
-                    <li><a href="./b_inicio.html">Lista</a></li>
-                    <li><a href="./c_lista.html">Recetas</a></li>
-                    <li><a href="./d_recetas.html">Inicio</a></li>
+                    <li><a href="./b_inicio.html">Inicio</a></li>
+                    <li><a href="./c_lista.html">Lista</a></li>
+                    <li><a href="./d_recetas.html">Recetas</a></li>
                     <li class="navAtras"><a href="./a_registro.html">Atrás</a></li>
                 </ul>
             </nav>
