--- a/d_recetas.html
+++ b/d_recetas.html
@@ -16,13 +16,13 @@
     <div class="container_contenido">
         <header>
             <h1>Waffler</h1>
-            <h2>¿No sabés qué cocinar, <span id="nombre"></span>?</h2>
+            <h2>¿No sabés qué cocinar, <span id="mostrar"></span>?</h2>
             <p>¡Te doy una receta al azar!</p>
             <nav>
                 <ul>
-                    <li><a href="./b_inicio.html">Lista</a></li>
-                    <li><a href="./c_lista.html">Recetas</a></li>
-                    <li><a href="./d_recetas.html">Inicio</a></li>
+                    <li><a href="./b_inicio.html">Inicio</a></li>
+                    <li><a href="./c_lista.html">Lista</a></li>
+                    <li><a href="./d_recetas.html">Recetas</a></li>
                     <li class="navAtras"><a href="./a_registro.html">Atrás</a></li>
                 </ul>
             </nav>
