--- a/d_recetas.html
+++ b/d_recetas.html
@@ -16,14 +16,15 @@
     <div class="container_contenido">
         <header>
             <h1>Waffler</h1>
-            <h2>¿No sabés qué cocinar, <span id="mostrar"></span>?</h2>
+            <h2>¿No sabés qué cocinar<span id="bienvUsuario"> </span>?</h2>
             <p>¡Te doy una receta al azar!</p>
             <nav>
                 <ul>
-                    <li><a href="./b_inicio.html">Inicio</a></li>
+                    <li class="navInicio"><a href="./b_inicio.html">Inicio</a></li>
+                 
                     <li><a href="./c_lista.html">Lista</a></li>
                     <li><a href="./d_recetas.html">Recetas</a></li>
-                    <li class="navAtras"><a href="./a_registro.html">Atrás</a></li>
+                   
                 </ul>
             </nav>
         </header>
@@ -43,6 +44,7 @@
 
 
     <!-- jsDelivr :: Libreria :: Boostrap-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <!--  SCRIPT -->
     <script src="./javascript/main.js"></script>
