--- a/b_inicio.html
+++ b/b_inicio.html
@@ -16,13 +16,16 @@
     <div class="container_contenido">
         <header>
             <h1>Waffler</h1>
-            <h2>¡Hola, <p id="mostrar"></p>! Estoy feliz de que estés aquí.</h2>
+            <h2>¡Hola<span id="bienvUsuario"> </span>! Estoy feliz de que estés aquí.</h2>
             <p>¿Que haremos hoy?</p>
             <nav>
                 <ul>
-                    <li><a href="./b_inicio.html">Inicio</a></li>
+                    <li  class="navInicio"><a href="./b_inicio.html">Inicio</a></li>
+                    
                     <li><a href="./c_lista.html">Lista</a></li>
                     <li><a href="./d_recetas.html">Recetas</a></li>
+                    <br>
+                    <br>
                     <li class="navAtras"><a href="./a_registro.html">Atrás</a></li>
                 </ul>
             </nav>
@@ -31,6 +34,7 @@
     </div>
 
     <!-- jsDelivr :: Libreria :: Boostrap-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <!--  SCRIPT -->
     <script src="./javascript/main.js"></script>
